--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
             </header>
             <ul>
                 <li>
-                    <a href="file:///C:/vs%20code/Instagram_linkinbio/about_me.html">
+                    <a href="https://hayward74instagrampage.on.drv.tw/www.Instagram_linkinbio.com/about_me.html">
                         <img src="./images/seed.png" alt="About me" width="20" />
                     About me
                     </a>
                 </li>
                 <li>
-                    <a href="file:///C:/vs%20code/Instagram_linkinbio/other_acc.html">
+                    <a href="https://hayward74instagrampage.on.drv.tw/www.Instagram_linkinbio.com/other_acc.html">
                         <img src="./images/instagram_icon.png" alt="Other accounts" width="20" />
                         Other accounts
                     </a>
@@ -62,7 +62,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="file:///C:/vs%20code/Instagram_linkinbio/contact.html">
+                    <a href="https://hayward74instagrampage.on.drv.tw/www.Instagram_linkinbio.com/contact.html">
                         <img src="./images/email.png" alt="email" width="20" />
                         Email
                     </a>                    
