--- a/about_me.html
+++ b/about_me.html
@@ -27,7 +27,7 @@
                     Hey, I'm Hayward.
                 </h1>
                 <div class="text">
-                    I'm currently a undergraduate student studying in 
+                    I'm currently an undergraduate student studying in 
                    <a href="https://hkust.edu.hk/">Hong Kong University of Science and Technology</a>. 
                    This website hosts some of the school and personal projects that I have done before. 
                     </div> 
